--- a/public/Logged/logged.html
+++ b/public/Logged/logged.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="Logged/logged.css" />
-    <script src="Logged/logged.js"></script>
+    
   </head>
   <body>
     <div class="container">
@@ -40,9 +40,34 @@
     </div>
     <script>
       let test = document.getElementById("Out-btn");
-      test.addEventListener("click", () => {
-        window.location.href = "http://localhost:3000/";
-      });
+
+test.addEventListener("click", () => {
+  sendData("http://localhost:3000/logout", {}, "POST", true);
+});
+
+async function sendData(url, data, method, json) {
+    let myHeaders = {
+      "Allow-Control-Allow-Origin": "*",
+    };
+  
+    if (json) {
+      myHeaders["Content-Type"] = "application/json";
+    }
+  
+    let req = await fetch(url, {
+      method: method,
+      headers: myHeaders,
+      body: JSON.stringify(data),
+    });
+  
+    let res = await req.json();
+    console.log(res);
+    if (res.message == true) {
+      window.location.href = "http://localhost:3000/home";
+    } else{
+      window.location.href = "http://localhost:3000"
+    }
+  }
     </script>
   </body>
 </html>
